# meshclaw

./: .gitignore  Makefile  README.md  go.mod  go.sum  install.sh  meshclaw-mcp-server.py  pyproject.toml
.github/workflows/: publish.yml
cmd/meshclaw/: main.go
cmd/meshdb/: main.go
cmd/mpop/: main.go
cmd/statsd/: main.go
cmd/vault/: main.go
cmd/vssh/: main.go
cmd/wire/: main.go
cmd/worker/: main.go
internal/common/: util.go
internal/coordinator/: server.go
internal/meshclaw/: agent.go  batch.go  config.go  providers.go  runner.go  scheduler.go  shell.go  template.go  webchat.go  worker.go  workflow.go
internal/meshdb/: analytics.go  distributed.go  indexall.go  meshdb.go  remote_exec.go  remote_merge.go  remote_path.go  smart.go
internal/mpop/: config.go  exec.go  peers.go  status.go
internal/net/: connect.go  discover.go
internal/vault/backup/: local.go
internal/vault/engine/: blob.go  engine.go
internal/vault/manager/: manager.go
internal/vault/shamir/: shamir.go
internal/vssh/: auth.go  client.go  pty_darwin.go  pty_linux.go  relay.go  server.go  sshconfig.go  sync.go  transfer.go
internal/wire/: api.go  config.go  daemon.go  distributed.go  interface.go  relay.go
python/: README.md  pyproject.toml
python/src/meshclaw/: __init__.py  cli.py  mcp_server.py
scripts/: mesh-status.sh
src/meshclaw/: __init__.py  __main__.py  agent.py  brain.py  cli.py  mcp_server.py  messenger.py  orchestrator.py  runtime.py  scenario.py  task.py  template.py  webchat.py
src/meshclaw/mcp/: rtlinux_mcp_server.py
src/meshclaw/plugins/: __init__.py  gmail_calendar.py
src/meshclaw/scripts/: build-buildroot.sh
src/meshclaw/templates/assistant/: template.yaml
src/meshclaw/templates/code-reviewer/: template.yaml
src/meshclaw/templates/codex-assistant/: template.yaml
src/meshclaw/templates/cursor-assistant/: template.yaml
src/meshclaw/templates/email/: template.yaml
src/meshclaw/templates/mac-assistant/: template.yaml
src/meshclaw/templates/news/: template.yaml
src/meshclaw/templates/orchestrator/: template.yaml
src/meshclaw/templates/research/: template.yaml
src/meshclaw/templates/system-monitor/: template.yaml
web/: index.html  install.sh
