[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshclaw"
version = "0.5.5"
description = "AI workers, anywhere — run AI agents on any machine, no cloud required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "MeshPOP", email = "mpop@mpop.dev"}
]
keywords = ["ai", "agent", "worker", "ollama", "llm", "automation", "mesh", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.18.0", "openai>=1.0.0"]
meshpop = ["meshpop", "vssh", "meshpop-wire"]

[project.scripts]
meshclaw = "meshclaw.cli:main"
meshclaw-mcp = "meshclaw.mcp_server:main"

[project.urls]
Homepage = "https://meshclaw.run"
Repository = "https://github.com/meshclaw/meshclaw"
Issues = "https://github.com/meshclaw/meshclaw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."meshpop.mcp"]
meshclaw = "meshclaw.mcp_server"
